--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>IBERO - Servicios en Línea</title>
-  <link rel="stylesheet" href="/dashboard-styles.css">
+  <link rel="stylesheet" href="./css/dashboard-styles.css">
   <link rel="icon" href="assets/favicon.ico">
 </head>
 <body class="dashboard">
