--- a/historial.html
+++ b/historial.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Historia Académica - IBERO</title>
-  <link rel="stylesheet" href="/historial-styles.css">
+  <link rel="stylesheet" href="./css/historial-styles.css">
 </head>
 <body class="dashboard">
   <header class="topbar">
