--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>IBERO - Servicios en Línea</title>
+  <base href="./">
   <link rel="stylesheet" href="./css/dashboard-styles.css">
   <link rel="icon" href="assets/favicon.ico">
 </head>
@@ -20,24 +21,24 @@
     <nav class="sidebar">
   <ul>
     <li><strong>TESORERÍA</strong></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Pagos en Línea</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Pagos en Sucursal Bancaria</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Servicios de Facturación</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Consultas</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Domiciliación</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Captura de aval</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Pagos en Línea</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Pagos en Sucursal Bancaria</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Servicios de Facturación</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Consultas</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Domiciliación</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Captura de aval</a></li>
 
     <li><strong>BECAS Y FINANCIAMIENTO</strong></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Trámites y Solicitudes</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Trámites y Solicitudes</a></li>
 
     <li><strong>SERVICIOS ESCOLARES</strong></li>
     <li><a href="historial.html">Historia Académica</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Materias Inscritas</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Situación Académica</a></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Horarios</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Materias Inscritas</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Situación Académica</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Horarios</a></li>
 
     <li><strong>OTROS</strong></li>
-    <li><a href="/archivos ibero/becas_financiamiento.html">Consulta Documentos Firmados</a></li>
+    <li><a href="./archivos-ibero/becas_financiamiento.html">Consulta Documentos Firmados</a></li>
   </ul>
 </nav>
 
