--- a/historial.html
+++ b/historial.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Historia Académica - IBERO</title>
+  <base href="./">
   <link rel="stylesheet" href="./css/historial-styles.css">
 </head>
 <body class="dashboard">
