--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Servicios en Línea - IBERO</title>
+  <base href="./">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
