--- a/archivos-ibero/historial.html
+++ b/archivos-ibero/historial.html
@@ -7,28 +7,11 @@
   <link rel="stylesheet" href="./css/historial-styles.css">
 </head>
 <body class="dashboard">
-<script>
-    let start = 1800;
-    function countdown() {
-      const timer = document.getElementById("timer");
-      let minutes = Math.floor(start / 60);
-      let seconds = start % 60;
-      timer.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds} Tiempo Restante`;
-      start--;
-      if (start < 0) start = 1800;
-      setTimeout(countdown, 1000);
-    }
-    window.onload = countdown;
-  </script>
-</head>
-<body class="dashboard">
-  <!-- Topbar como en dashboard.html -->
   <header class="topbar">
-    <img src="../imagenes/Logo-2.png" alt="IBERO">
+    <img src="imagenes/Logo-2.png" alt="IBERO">
     <div class="topbar__info">
       <span>233207-2 PONCE MENDEZ LUIS EDUARDO</span>
-      <span id="timer">30:00 Tiempo Restante</span>
-      <span>Mi Perfil</span>
+      <span>👤 Mi Perfil</span>
     </div>
   </header>
 
@@ -137,9 +120,9 @@
 <tr><td>20195</td><td>AE010</td><td>8</td><td>9</td><td>R</td><td>–</td><td>ADMINISTRACIÓN</td></tr>
 <tr><td>23981</td><td>LE001</td><td>8</td><td>8</td><td>ER</td><td>–</td><td>TALLER DE ESCRITURA ACADÉMICA</td></tr>
 <tr><td>24077</td><td>PFI001</td><td>4</td><td>10</td><td>B8</td><td>–</td><td>TALLER DE INTEGRACIÓN UNIVERSITARIA</td></tr>
-<tr><td>24259</td><td>ME015</td><td>8</td><td>8</td><td>D4</td><td>–</td><td>MERCADOTECNIA</td></tr>
+<tr><td>24259</td><td>ME015</td><td>8</td><td>6</td><td>D4</td><td>–</td><td>MERCADOTECNIA</td></tr>
 <tr><td>24308</td><td>ST121</td><td>8</td><td>10</td><td>F4</td><td>–</td><td>TALLER DE APLICACIONES DE INFORMACIÓN</td></tr>
-<tr><td>80313</td><td>CD048</td><td>8</td><td>9</td><td>R</td><td>–</td><td>CONTABILIDAD</td></tr>
+<tr><td>80313</td><td>CD048</td><td>8</td><td>6</td><td>R</td><td>–</td><td>CONTABILIDAD</td></tr>
 </tbody>
 </table>
 </section>
@@ -147,8 +130,8 @@
       <!-- Puedes copiar/pegar más secciones como esta para OTOÑO-2024, VERANO-2024, etc. -->
 
       <section class="resumen-final">
-        <p><strong>CRÉDITOS:</strong> 204</p>
-        <p><strong>PROMEDIO:</strong> 8.3</p>
+        <p><strong>CRÉDITOS:</strong> 158</p>
+        <p><strong>PROMEDIO:</strong> 7.9</p>
         <p class="nota">Este documento es sólo de carácter informativo.</p>
       </section>
     </section>
