Corrige navegación lateral en historial.html

--- a/historial.html
+++ b/historial.html
@@ -33,28 +33,29 @@
   </header>
 
   <main class="main-content">
-    <nav class="sidebar">
-      <ul>
-        <li><strong>TESORERÍA</strong></li>
-        <li>Pagos en Línea</li>
-        <li>Pagos en Sucursal Bancaria</li>
-        <li>Servicios de Facturación</li>
-        <li>Consultas</li>
-        <li>Domiciliación</li>
-        <li>Captura de aval</li>
+  <nav class="sidebar">
+    <ul>
+      <li><strong>TESORERÍA</strong></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Pagos en Línea</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Pagos en Sucursal Bancaria</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Servicios de Facturación</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Consultas</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Domiciliación</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Captura de aval</a></li>
 
-        <li><strong>BECAS Y FINANCIAMIENTO</strong></li>
+      <li><strong>BECAS Y FINANCIAMIENTO</strong></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Trámites y Solicitudes</a></li>
 
-        <li><strong>SERVICIOS ESCOLARES</strong></li>
-        <li><a href="#" class="active">Historia Académica</a></li>
-        <li>Materias Inscritas</li>
-        <li>Situación Académica</li>
-        <li>Horarios</li>
+      <li><strong>SERVICIOS ESCOLARES</strong></li>
+      <li><a href="historial.html" class="active">Historia Académica</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Materias Inscritas</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Situación Académica</a></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Horarios</a></li>
 
-        <li><strong>OTROS</strong></li>
-        <li>Consulta Documentos Firmados</li>
-      </ul>
-    </nav>
+      <li><strong>OTROS</strong></li>
+      <li><a href="./archivos-ibero/becas_financiamiento.html">Consulta Documentos Firmados</a></li>
+    </ul>
+  </nav>
 
     <section class="content-area">
       <h2>Historia Académica</h2>
