--- a/historial.html
+++ b/historial.html
@@ -60,10 +60,39 @@
     <section class="content-area">
       <h2>Historia Académica</h2>
       <button onclick="window.print()">🖨️ Imprimir</button>
-      <p>Información al 2 de Julio de 2025.</p>
+      <p>Información al 2 de Enero de 2026.</p>
 
       <!-- Ejemplo de tabla de materias por periodo -->
-      <section class='periodo'>
+<section class='periodo'>
+<h3>OTOÑO-2025</h3>
+<table>
+<thead>
+<tr><th>CVE</th><th>SIGLA</th><th>CRED</th><th>CAL</th><th>GPO</th><th>OBS</th><th>MATERIA</th></tr>
+</thead>
+<tbody>
+<tr><td>23908</td><td>RU102</td><td>8</td><td>8</td><td>C4</td><td>–</td><td>LA PERSONA EN SU ENTORNO SOCIOAMBIENTAL</td></tr>
+<tr><td>24075</td><td>ME013</td><td>8</td><td>5</td><td>C</td><td>–</td><td>MERCADOTECNIA DE SERVICIOS</td></tr>
+<tr><td>24272</td><td>ST112</td><td>8</td><td>5</td><td>K1</td><td>–</td><td>BD Y ANÁLISIS DE LA INFORMACIÓN</td></tr>
+<tr><td>80210</td><td>ME019</td><td>6</td><td>8</td><td>B</td><td>–</td><td>ESTRATEGIA DE DISTRIBUCIÓN</td></tr>
+<tr><td>80281</td><td>ME030</td><td>6</td><td>7</td><td>A</td><td>–</td><td>COMUNICACIÓN INTEGRAL DE MERCADOTECNIA</td></tr>
+<tr><td>80360</td><td>ME033</td><td>6</td><td>6</td><td>C</td><td>–</td><td>INVESTIGACIÓN DE MERCADOS</td></tr>
+<tr><td>80369</td><td>EN128</td><td>8</td><td>8</td><td>H</td><td>–</td><td>EMPRESA Y SOCIEDAD</td></tr>
+</tbody>
+</table>
+</section>
+<section class='periodo'>
+<h3>VERANO-2025</h3>
+<table>
+<thead>
+<tr><th>CVE</th><th>SIGLA</th><th>CRED</th><th>CAL</th><th>GPO</th><th>OBS</th><th>MATERIA</th></tr>
+</thead>
+<tbody>
+<tr><td>24318</td><td>MT126</td><td>6</td><td>5</td><td>C</td><td>–</td><td>ESTADÍSTICA II</td></tr>
+<tr><td>80376</td><td>AE212</td><td>6</td><td>9</td><td>A</td><td>–</td><td>LIDERAZGO Y ETICA EMPRESARIAL</td></tr>
+</tbody>
+</table>
+</section>
+<section class='periodo'>
 <h3>PRIMAVERA-2025</h3>
 <table>
 <thead>
